modification du fichier navigation

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./components/header";
 @import "./components/Gallery.scss";
 @import "./components/home";
+@import "./components/dynamicText";
