--- a/src/styles/components/_Gallery.scss
+++ b/src/styles/components/_Gallery.scss
@@ -5,10 +5,9 @@
     -webkit-column-count: 3;
     -moz-column-count: 3;
     column-count: 3;
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
+   /* -webkit-column-width: 33%;
+    -moz-column-width: 33%; */
     column-count: 33%;
-    padding: 0 12px;
 }
 .gallery .pics{
     -webkit-transition: all 350ms ease;
