--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import "./settings";
 @import "./components/navigation";
 @import "./components/header";
-@import "./components/Gallery.scss";
+@import "./components/gallery";
 @import "./components/home";
 @import "./components/dynamicText";
+@import "./components/contact";
+@import "./components/votreclub";
