--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import "./components/dynamicText";
 @import "./components/contact";
 @import "./components/votreclub";
+@import "./components/footer";
