--- a/src/styles/components/_dynamicText.scss
+++ b/src/styles/components/_dynamicText.scss
@@ -42,3 +42,10 @@
       }
     }
   }
+  @media (max-width: 991px){
+    .dynamic-text {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+    }
