--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -4,8 +4,23 @@
 };
 p {
     font-size: medium;
-    display: flex;
-    justify-content: end;
-    align-items: center;
     padding-bottom: 30px;
 }
+@media (max-width: 991px){
+    .home {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+    }
+    @media (max-width: 480px){
+        .home{
+            -webkit-column-count: 1;
+            -moz-column-count: 1;
+            column-count: 1;
+            -webkit-column-width: 100%;
+            -moz-column-width: 100%;
+            column-width: 100%;
+    
+        }
+    }
