--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,11 @@
 @import "./settings";
-@import "./components/navigation";
 @import "./components/header";
 @import "./components/gallery";
 @import "./components/home";
-@import "./components/dynamicText";
 @import "./components/contact";
-@import "./components/votreclub";
 @import "./components/footer";
+@import "./components/navigation";
+@import "./components/bureau";
+@import "./components/licencier";
+@import "./components/Agenda";
+@import "./components/resultats";
