--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,78 +1,14 @@
+.navbar-nav > a {
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+    }
 .navigation {
-    position: absolute;
-    top: 1rem;
-    left: 1.4rem;
-    font-size: 1.4rem;
-    line-height: 28px;
-    color: $color-4;
-  
-    &:before {
-      content: '';
-      position: absolute;
-      height: 300px;
-      width: 300px;
-      border-radius: 50%;
-      background: $color-1;
-      top: -150px;
-      left: -120px;
-      z-index: -1;
-      animation: navAnim 20s infinite alternate;
-  
-      @keyframes navAnim {
-        50% {
-          transform: scale(1.2);
-        }
-        100% {
-          transform: scale(1);
-        }
-      }
-      @media screen and (max-width: 430px){
-        height: 50px;
-        width: 50px;
-      }
-    }
-    .nav-active {
-      color: brown;
-    }
-    ul:hover li:not(:hover) {
-      opacity: .7;
-    }
-    ul:hover li:hover {
-      color: rgb(156, 93, 93);
-    }
-  
-    .nav-votreclub {
-      cursor: pointer;
-      display: flex;
-      padding-right: 6rem;
-      transition: .5s;
-  
-      &:hover .nav-pages,
-      .nav-pages:hover {
-  
-        visibility: visible;
-        opacity: 1;
-  
-        li {
-          transform: rotatey(0deg)
-        }
-      }
-  
-      .nav-pages{
-        position: absolute;
-        visibility: hidden;
-        opacity: 0;
-        padding: 0 40px;
-        width: 300px;
-        transform: translateX(130px);
-        transition: .3s ;
-        perspective: 500px;
-  
-        li {
-          transform: rotatey(30deg) scaleX(1.2);
-          transform-origin: center;
-          transition: .3s;
-        }
-      }
-    }
-  }
+    border-radius: 0 0 20px 20px;
+    width: 100%;
+    background-color: $color-1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
