--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import "./components/licencier";
 @import "./components/Agenda";
 @import "./components/resultats";
+@import "./components/slider";
