--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -2,10 +2,11 @@
 
 $font-1: "Crimson", sans-serif;
 
-$color-1: #8fcaf1;
+$color-1: #3452db;
 $color-2: #f7f7f7;
 $color-3: #282c34;
-$color-4: rgb(32,35,42);
+$color-4: #cacae0;
+$color-5: #ff3c00;
 
 * {
     box-sizing: border-box;
@@ -17,7 +18,7 @@ body {
     max-width: 1296px;
     font-family: $font-1;
     color: $color-3;
-    background-color: white;
+    background-color: rgb(231, 227, 227);
 }
 li {
     list-style-type: none;
